# skilltest

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  skillunit-proposal-v2.md
.github/workflows/: skilltest-ci.yml
docker/: Dockerfile  Dockerfile.claude  README.md  entrypoint.sh
skills/pdf-skills/: Dockerfile
skills/pdf-skills/tests/: tests.yaml
skills/pdf-skills/tests/pytests/: conftest.py  test_merge.py  test_page_count.py
skills/write-skilltest-pytests/: SKILL.md
skilltest/: __init__.py  cli.py  coverage.py  diff.py  docker_runner.py  executor.py  grader.py  loader.py  models.py  parser.py  pytest_runner.py  run_bundle.py  runner.py  writer.py
skilltest/providers/: __init__.py  anthropic_provider.py  base.py  local_provider.py  openai_provider.py
tests/: test_diff.py  test_docker_runner.py  test_grader.py  test_loader.py  test_parser.py  test_pytest_runner.py  test_run_bundle.py
tests/fixtures/anthropic_skill/: SKILL.md
tests/fixtures/anthropic_skill/tests/: tests.yaml
tests/fixtures/openai_skill/: SKILL.md
tests/fixtures/openai_skill/tests/: tests.yaml
